Fix: website now scrollable on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,11 +1,11 @@
 .pageContainer {
-  background: url(../public/background\ no\ text.png) no-repeat center center
-    fixed;
+  background: url(../public/background\ no\ text.png) repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   font-family: 'Roboto Flex', sans-serif;
 }
 
